FullSb1-27-apr-15/src/objects/Comments__c.object
<CustomObject>
    <fields>
        <fullName>Applicant__c</fullName>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Comment</relationshipLabel>
        <relationshipName>Comment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Comment</relationshipLabel>
        <relationshipName>Comment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment_Created_from__c</fullName>
        <label>Comment Created from</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Edited__c</fullName>
        <formula>DATEVALUE(CreatedDate) &lt;&gt;  DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edited?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finance__c</fullName>
        <label>Finance</label>
        <referenceTo>Opportunity_Finance__c</referenceTo>
        <relationshipLabel>Comment</relationshipLabel>
        <relationshipName>Comment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Comment</relationshipLabel>
        <relationshipName>Comment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Written_Date__c</fullName>
        <label>Written Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Written_by__c</fullName>
        <label>Written by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Comment</label>
    <nameField>
        <displayFormat>Note-{000}</displayFormat>
        <label>Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>